tests/semantic/record_type/record_type.err
Error: Number constant (type mismatch) in file record_type.dl at line 17
MyRelation(0).          // yes
-----------^-------------------
Error: Number constant (type mismatch) in file record_type.dl at line 18
MyRelation(1).          // yes
-----------^-------------------
Error: Symbol constant (type mismatch) in file record_type.dl at line 20
MyRelation("1").        // yes
-----------^-------------------
Error: Mismatching arity of relation MyRelation in file record_type.dl at line 21
MyRelation(1,1).        // yes
^------------------------------
Error: Number constant (type mismatch) in file record_type.dl at line 23
MyRelation([1,1,1]).    // yes
------------^------------------
Error: Number constant (type mismatch) in file record_type.dl at line 23
MyRelation([1,1,1]).    // yes
--------------^----------------
Error: Number constant (type mismatch) in file record_type.dl at line 23
MyRelation([1,1,1]).    // yes
----------------^--------------
7 errors generated, evaluation aborted
